CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org_B2B__c/Consorcio_Org_B2B__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Indica que perfiles pueden activas componentes en proyecto banca personas</description>
    <label>Consorcio Org B2B</label>
</CustomObject>