CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org_B2B__c/fields/Carga_Masiva_de_Prospectos__c.field-meta.xml
<CustomField>
    <fullName>Carga_Masiva_de_Prospectos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida que el perfil active el proceso de asignación y validaciones en la carga masiva de prospectos y clientes asociados a las campañas y/o envíos masivos</description>
    <label>Carga Masiva de Prospectos</label>
    <type>Checkbox</type>
</CustomField>