CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org_B2B__c/fields/Cuota_Maxima_de_Leads__c.field-meta.xml
<CustomField>
    <fullName>Cuota_Maxima_de_Leads__c</fullName>
    <description>Cuota máxima de prospectos que pueden asignarse a un ejecutivo</description>
    <label>Cuota Maxima de Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>