CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org_B2B__c/fields/Sales_Project_B2B__c.field-meta.xml
<CustomField>
    <fullName>Sales_Project_B2B__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validar si el perfil permite acciones en Sales B2B</description>
    <label>Sales Project B2B</label>
    <type>Checkbox</type>
</CustomField>