CNSDEVCOLECT/force-app/main/default/objects/Consorcio_Org_B2B__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Carga_Masiva_de_Prospectos__c</columns>
    <columns>Sales_Project_B2B__c</columns>
    <columns>Cuota_Maxima_de_Leads__c</columns>
    <columns>SETUP_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>